# schoolorbit

./: .env.example  .gitignore  .vercelignore  README.md  api-requests.http  check-users.ts  debug-db.ts  drizzle.config.ts  package-lock.json  package.json  seed-users.ts  svelte.config.js  vercel.json
backend/: .env  .env.example  Cargo.toml
backend/sql/: 001_init_schema.sql  002_create_indexes.sql  meta_001_tenant_routing.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/auth/: cookies.rs  extractor.rs  jwt.rs  mod.rs  refresh.rs
backend/src/db/: migrate.rs  mod.rs  pool.rs
backend/src/meta/: mod.rs  resolver.rs
backend/src/rbac/: check.rs  mod.rs  model.rs
backend/src/routes/: auth.rs  dashboard.rs  menu.rs  mod.rs
backend/src/util/: crypto.rs
drizzle/: 0000_flimsy_jack_power.sql  0001_new_zodiak.sql  0002_absent_mephisto.sql  0003_white_kitty_pryde.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0003_snapshot.json  _journal.json
frontend/: .env.example  .gitignore  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: app.d.ts  hooks.server.ts
frontend/src/lib/: api.ts  menu.ts  tenant.ts
frontend/src/routes/: +layout.server.ts
scripts/: seed-users.mjs
src/: app.css  app.d.ts  app.html  hooks.server.ts
src/lib/: menu.ts
src/lib/components/: AppLayout.svelte  Sidebar.svelte  UserAutocomplete.svelte
src/lib/features/: index.ts  policy.ts  registry.ts  types.ts
src/lib/server/: authorization.ts  config.ts  cookies.ts  crypto.ts  (+7 more)
src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts
(+90 files in other folders)
