[package]
name = "schoolorbit-backend"
version = "0.1.0"
edition = "2021"
default-run = "server"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[[bin]]
name = "simple-seed"
path = "src/bin/simple_seed.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["tower-log", "multipart"] }
tower = { version = "0.4", features = ["timeout", "limit", "util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id"] }
hyper = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "ipnetwork"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
jsonwebtoken = "9.0"
argon2 = "0.5"
rand = "0.8"
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
cookie = "0.18"
dotenvy = "0.15"
axum-extra = { version = "0.9", features = ["cookie"] }
ipnetwork = "0.20"
